syntax = "proto3";

package api;

option go_package = "github.com/andydunstall/pico/api";

message ProxyHttpReq {
  // Contains the encoded HTTP request.
  bytes http_req = 1;
}

enum ProxyHttpStatus {
  OK = 0;
  UPSTREAM_TIMEOUT = 1;
  UPSTREAM_UNREACHABLE = 2;
  INTERNAL_ERROR = 3;
}

message ProxyHttpError {
  ProxyHttpStatus status = 1;
  string message = 2;
}

message ProxyHttpResp {
  // Contains the encoded HTTP response, or is empty if an error occured.
  bytes http_resp = 1;
  ProxyHttpError error = 2;
}
